# samplevbt

./: .env.example  .gitignore  README.md  pyproject.toml
backtesting/: config.yaml  main.py
optimization/: config.yaml  main.py
src/: backtester.py  data_format.py  functions.py  io.py  reports.py  warnings_config.py  wfo.py
wfo/: config.yaml  main.py
