[tool.poetry]
name = "vbtsample"
version = "0.2.0"
description = "VectorBT backtesting framework for client Excel signal files (ar_bt.xlsx format)"
authors = ["Oleksandr Nazarevych <oleksandr.o.nazarevych@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
vectorbt = "^0.28.1"
pyyaml = "^6.0.3"
plotly = "^6.3.0"
matplotlib = "^3.10.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
openpyxl = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
